syntax = "proto3";

package NAlice;

option go_package = "a.yandex-team.ru/alice/megamind/protos/common";
option java_package = "ru.yandex.alice.megamind.protos.common";

message TPermissions {

    enum EValue {
        // Snake case to match JSON names
        Undefined = 0;
        Location = 1;
        ReadContacts = 2;
        CallPhone = 3;
        // Permission to set up reminders on device (usually android >=12).
        ScheduleExactAlarm = 4;
    }
}
